@@ -7,6 +7,13 @@ import net.sf.cglib.proxy.MethodProxy;
 import java.lang.reflect.Method;
 
 /**
+ * 这里是方法区内存溢出
+ * <p>
+ * <p>
+ * 设置 1.8 后不起作用，之后所有代码将基于 JDK1.7
+ * -XX:PermSize=20M
+ * -XX:MaxPermSize=20M
+ *
  * @author liuchun
  * @date 2018/9/10 10:35
  */
